--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -34,5 +34,5 @@ jobs:
           playwright install --with-deps
 
       - name: Run Python tests
-        run: pytest
+        run: pytest -p no:anyio -p no:asyncio
 
